Support automatic downloading of models for certain blessed encoders and NLP models. (#3)
* Autodownloading

* ensuring models don't get checked into gitignore

* Supporting auto-downloading for models